...
  withSequence,
  useAnimatedStyle,
  useSharedValue,
  Easing,
} from "react-native-reanimated";

const SplashScreen = () => {
  const navigate = useNavigate();
  const { authState } = useContext(AuthContext);
  const offsetLogo = useSharedValue(100);

  const offsetSuplaier = useSharedValue(100);

...
